  analysis
- Bugfix: Made use of the language file (nearly) everywhere.
- Bugfix: Make sure that there are no leftover chunks after a run.
- Bugfix: Prevent large output in case of arrays with more than 100
  items.
- Bugfix: Escaped info text about the maximum resting level.
- Bugfix: Missing leading backslash in classname display in several
  places.

2.2.0
- Added more search pattern and source code parsing to the
  getter analysis.
- Added a metatag to both skins to prevent crawler from indexing
  a kreXX output. Remember kids: never debug a productive site.
  This will only lead to trouble.
- Added a Registry class, so the overwrites can actually access
  additional data from the outside.
- The log chunk and config folder are now configurable.
- Added a Filter for the server document root from the file path
  of the calling file.
- Bugfix: Removed a warning in the IP-Whitelisting, in case there
  is no actual IP available.
- Bugfix: Source generation for resolved recursions works now as
  expected.
- Bugfix: Removed a warnings and some notices in case the $_SERVER
  variable was messed with.
- Bugfix: Prevent a thrown error, in case a class implements some
  sort of debugger trap by explicitely throwing errors when trying
  to get the traversable data.
- Change: Output -> File will now save the logfile directly after
  the analysis.
- Change: Renamed the Output -> Frontend configuration to
  Output -> browser.


2.1.1
- Added the info, if a property / method is inherited.
- Added a configuration for the scope analysis.
- Added the search option "Search whole value".
- Added the additional info from Smoky-Grey to the Hans, which
  will be displayed inside the help-box on hover.
- Bugfix: The comments will not break out of the getter analysis
  json anymore
- Bugfix: Removed a warning in case kreXX was called from eval'd
  code.
- Bugfix: Dumping of inherited private properties works now.
- Bugfix: Inherited properties and methods are now regarded by the